tweaks to progressbar styles to prevent text from wrapping

--- a/src/themes/delicious/css/progressbar.css
+++ b/src/themes/delicious/css/progressbar.css
@@ -68,6 +68,7 @@
 .jxProgressBar-text {
     position: absolute;
     display: block;
+    overflow: visible;
     top: 0px;
     left: 1px;
     width: auto;
@@ -79,4 +80,5 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
     line-height: 20px;
+    white-space: nowrap;
 }
